# json-getopt-example

./: .gitattributes  CMakeLists.txt  main.cpp  readme.txt  sample_extn.json
cmake/: version.cmake
src/: main.cc  sample.json
